# calc48

./: .gitignore  CMakeLists.txt  README.md  REFACTOR_PLAN.md
calc48/: README.md  calc48.py
docs/: keymap.md  saturn.txt  stack_io_plan.md
examples/: calc48.py  calc48_skeleton.py  ffi_smoke.c  hp48.py  rpl_eval.py
libcalc48/: CMakeLists.txt  README.md  hp48.py
libcalc48/include/: append.h  debugger.h  disasm.h  global.h  hp48.h  hp48_emu.h  hp48_io.h  hp48_rpl.h  hp48_serial.h  hp48_state.h  hp48_ui.h  resources.h  romio.h  rpl.h  timer.h
libcalc48/src/: actions.c  context.c  debugger.c  debugger_stub.c  device.c  emulate.c  hp48_io_stdio.c  hp48_serial_pty.c  hp48_serial_socket.c  init.c  lcd.c  memory.c  resources.c  rpl.c  rplstack.c  serial.c  timer.c
libhp48/: CMakeLists.txt
libhp48/src/: context.c  debugger.c
sdl/: CMakeLists.txt
sdl/src/: mainsdl.c  x48_sdl.c  x48_sdl.h
src/: REFACTOR_PLAN.md  actions.c  checkrom.c  context.c  debugger.c  debugger.h  device.c  device.h  disasm.c  dump2rom.c  emulate.c  errors.c  errors.h  hp48.h  hp48_io.h  hp48_io_stdio.c  hp48_state.h  hp48_ui.h  init.c  lcd.c  mainsdl.c  memory.c  register.c  resources.h  romio.c  romio.h  rpl.h  serial.c  timer.c  x48_sdl.c  x48_sdl.h
tools/: README.md  extract_fonts.py  hp48_fonts_gx.json  make_blank_state.py  mkcard.c  options.c
